environments/dev/recipe-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-api
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipe-api
  template:
    metadata:
      labels:
        app: recipe-api
    spec:
      containers:
        - name: recipe-api
          image: ghcr.io/therealdavidbour/recipe-api:fb3bed97fe6a4095a5ce01ffc94d612868eea0fd
          ports:
            - containerPort: 8000
