environments/dev/recipe-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipe-api
  namespace: dev
spec:
  selector:
    app: recipe-api
  ports:
    - port: 80
      targetPort: 8000
